--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ buildscript {
 apply plugin: 'forge'
 
 version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group= "com.rwtema.denseores" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "denseores-1.7"
 
 minecraft {
     version = "1.7.2-10.12.0.1024"
