Added support for a requiredMod entry in config files, so that blocks are not registered unless the base mod is present Dense Ores will now try to load after other mods (to give them time to register their blocks) Dense Ores now has a proper block registration entry (previously created blocks will disappear) Dense Ores will now autogenerate ore dictionary registrations with the prefix 'denseore' Dense ore blocks can now be silk touched Added localization support for the Dense- prefix Fixed dense ores being breakable without the proper tools Fixed dense ores replacing air blocks when a base block can't be found

--- a/build.gradle
+++ b/build.gradle
@@ -11,22 +11,27 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
 
 apply plugin: 'forge'
 
-version = "1.0"
+version = "dev-1.1"
 group= "com.rwtema.denseores" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "denseores-1.7"
+archivesBaseName = "denseores"
 
 minecraft {
-    version = "1.7.2-10.12.0.1024"
+    version = "1.7.2-10.12.1.1065"
     assetDir = "eclipse/assets"
 }
+
 processResources
 {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
+
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
