--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,29 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.1"
+version = "1.2"
 group= "com.rwtema.denseores" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "denseores"
 
 minecraft {
-    version = "1.7.2-10.12.1.1065"
+    version = "1.7.10-10.13.0.1152"
     assetDir = "eclipse/assets"
+}
+
+dependencies {
+    // you may put jars on which you depend on in ./libs
+    // or you may define them like so..
+    //compile "some.group:artifact:version:classifier"
+    //compile "some.group:artifact:version"
+      
+    // real examples
+    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
+    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+
+    // for more info...
+    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
+    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
 }
 
 processResources
