--- a/example_configs/denseores.cfg
+++ b/example_configs/denseores.cfg
@@ -209,6 +209,294 @@ ores {
         S:underlyingBlock=stone
     }
 
+    block_23 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=0
+        S:baseBlockTexture=netherores:Coal
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_24 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=1
+        S:baseBlockTexture=netherores:Diamond
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_25 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=2
+        S:baseBlockTexture=netherores:Gold
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_26 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=3
+        S:baseBlockTexture=netherores:Iron
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_27 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=4
+        S:baseBlockTexture=netherores:Lapis
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_28 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=5
+        S:baseBlockTexture=netherores:Redstone
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_29 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=6
+        S:baseBlockTexture=netherores:Copper
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_30 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=7
+        S:baseBlockTexture=netherores:Tin
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_31 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=8
+        S:baseBlockTexture=netherores:Emerald
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_32 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=9
+        S:baseBlockTexture=netherores:Silver
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_33 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=10
+        S:baseBlockTexture=netherores:Lead
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_34 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=11
+        S:baseBlockTexture=netherores:Uranium
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_35 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=12
+        S:baseBlockTexture=netherores:Nikolite
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_36 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=13
+        S:baseBlockTexture=netherores:Ruby
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_37 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=14
+        S:baseBlockTexture=netherores:Peridot
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_38 {
+        S:baseBlock=NetherOres:tile.netherores.ore.0
+        I:baseBlockMeta=15
+        S:baseBlockTexture=netherores:Sapphire
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_39 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=0
+        S:baseBlockTexture=netherores:Platinum
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_40 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=1
+        S:baseBlockTexture=netherores:Nickel
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_41 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=2
+        S:baseBlockTexture=netherores:Steel
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_42 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=3
+        S:baseBlockTexture=netherores:Iridium
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_43 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=4
+        S:baseBlockTexture=netherores:Osmium
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_44 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=5
+        S:baseBlockTexture=netherores:Sulfur
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_45 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=6
+        S:baseBlockTexture=netherores:Titanium
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_46 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=7
+        S:baseBlockTexture=netherores:Mithril
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_47 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=8
+        S:baseBlockTexture=netherores:Adamantium
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_48 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=9
+        S:baseBlockTexture=netherores:Rutile
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_49 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=10
+        S:baseBlockTexture=netherores:Tungsten
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_50 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=11
+        S:baseBlockTexture=netherores:Amber
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_51 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=12
+        S:baseBlockTexture=netherores:Tennantite
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_52 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=13
+        S:baseBlockTexture=netherores:Salt
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_53 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=14
+        S:baseBlockTexture=netherores:Saltpeter
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
+    block_54 {
+        S:baseBlock=NetherOres:tile.netherores.ore.1
+        I:baseBlockMeta=15
+        S:baseBlockTexture=netherores:Magnesium
+        D:denseOreProbability=1
+        I:retroGenID=1
+        S:underlyingBlock=netherrack
+    }
+
 }
 
 
