Added AE2 example configs. Added renderType to default example config.

--- a/example_configs/denseores.cfg
+++ b/example_configs/denseores.cfg
@@ -7,6 +7,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=iron_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -16,6 +17,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=gold_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -25,6 +27,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=lapis_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -34,6 +37,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=diamond_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -43,6 +47,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=emerald_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -52,6 +57,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=redstone_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -61,6 +67,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=coal_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=stone
     }
@@ -70,6 +77,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=quartz_ore
         D:denseOreProbability=1.0
+        I:renderType=0
         I:retroGenId=1
         S:underlyingBlock=netherrack
     }
@@ -79,6 +87,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=IC2:blockOreLead
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -88,6 +97,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=IC2:blockOreCopper
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -97,6 +107,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=IC2:blockOreUran
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -106,6 +117,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=IC2:blockOreTin
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -115,6 +127,7 @@ ores {
         I:baseBlockMeta=1
         S:baseBlockTexture=tinker:nether_cobalt
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -124,6 +137,7 @@ ores {
         I:baseBlockMeta=2
         S:baseBlockTexture=tinker:nether_ardite
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -133,6 +147,7 @@ ores {
         I:baseBlockMeta=3
         S:baseBlockTexture=tinker:ore_copper
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -142,6 +157,7 @@ ores {
         I:baseBlockMeta=4
         S:baseBlockTexture=tinker:ore_tin
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -151,6 +167,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=thermalfoundation:ore/Ore_Copper
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -160,6 +177,7 @@ ores {
         I:baseBlockMeta=1
         S:baseBlockTexture=thermalfoundation:ore/Ore_Tin
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -169,6 +187,7 @@ ores {
         I:baseBlockMeta=2
         S:baseBlockTexture=thermalfoundation:ore/Ore_Silver
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -178,6 +197,7 @@ ores {
         I:baseBlockMeta=3
         S:baseBlockTexture=thermalfoundation:ore/Ore_Lead
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -187,6 +207,7 @@ ores {
         I:baseBlockMeta=4
         S:baseBlockTexture=thermalfoundation:ore/Ore_Nickel
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -196,6 +217,7 @@ ores {
         I:baseBlockMeta=5
         S:baseBlockTexture=thermalfoundation:ore/Ore_Platinum
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -205,6 +227,7 @@ ores {
         I:baseBlockMeta=6
         S:baseBlockTexture=thermalfoundation:ore/Ore_Mithril
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -214,6 +237,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=netherores:Coal
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -223,6 +247,7 @@ ores {
         I:baseBlockMeta=1
         S:baseBlockTexture=netherores:Diamond
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -232,6 +257,7 @@ ores {
         I:baseBlockMeta=2
         S:baseBlockTexture=netherores:Gold
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -241,6 +267,7 @@ ores {
         I:baseBlockMeta=3
         S:baseBlockTexture=netherores:Iron
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -250,6 +277,7 @@ ores {
         I:baseBlockMeta=4
         S:baseBlockTexture=netherores:Lapis
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -259,6 +287,7 @@ ores {
         I:baseBlockMeta=5
         S:baseBlockTexture=netherores:Redstone
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -268,6 +297,7 @@ ores {
         I:baseBlockMeta=6
         S:baseBlockTexture=netherores:Copper
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -277,6 +307,7 @@ ores {
         I:baseBlockMeta=7
         S:baseBlockTexture=netherores:Tin
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -286,6 +317,7 @@ ores {
         I:baseBlockMeta=8
         S:baseBlockTexture=netherores:Emerald
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -295,6 +327,7 @@ ores {
         I:baseBlockMeta=9
         S:baseBlockTexture=netherores:Silver
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -304,6 +337,7 @@ ores {
         I:baseBlockMeta=10
         S:baseBlockTexture=netherores:Lead
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -313,6 +347,7 @@ ores {
         I:baseBlockMeta=11
         S:baseBlockTexture=netherores:Uranium
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -322,6 +357,7 @@ ores {
         I:baseBlockMeta=12
         S:baseBlockTexture=netherores:Nikolite
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -331,6 +367,7 @@ ores {
         I:baseBlockMeta=13
         S:baseBlockTexture=netherores:Ruby
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -340,6 +377,7 @@ ores {
         I:baseBlockMeta=14
         S:baseBlockTexture=netherores:Peridot
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -349,6 +387,7 @@ ores {
         I:baseBlockMeta=15
         S:baseBlockTexture=netherores:Sapphire
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -358,6 +397,7 @@ ores {
         I:baseBlockMeta=0
         S:baseBlockTexture=netherores:Platinum
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -367,6 +407,7 @@ ores {
         I:baseBlockMeta=1
         S:baseBlockTexture=netherores:Nickel
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -376,6 +417,7 @@ ores {
         I:baseBlockMeta=2
         S:baseBlockTexture=netherores:Steel
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -385,6 +427,7 @@ ores {
         I:baseBlockMeta=3
         S:baseBlockTexture=netherores:Iridium
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -394,6 +437,7 @@ ores {
         I:baseBlockMeta=4
         S:baseBlockTexture=netherores:Osmium
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -403,6 +447,7 @@ ores {
         I:baseBlockMeta=5
         S:baseBlockTexture=netherores:Sulfur
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -412,6 +457,7 @@ ores {
         I:baseBlockMeta=6
         S:baseBlockTexture=netherores:Titanium
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -421,6 +467,7 @@ ores {
         I:baseBlockMeta=7
         S:baseBlockTexture=netherores:Mithril
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -430,6 +477,7 @@ ores {
         I:baseBlockMeta=8
         S:baseBlockTexture=netherores:Adamantium
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -439,6 +487,7 @@ ores {
         I:baseBlockMeta=9
         S:baseBlockTexture=netherores:Rutile
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -448,6 +497,7 @@ ores {
         I:baseBlockMeta=10
         S:baseBlockTexture=netherores:Tungsten
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -457,6 +507,7 @@ ores {
         I:baseBlockMeta=11
         S:baseBlockTexture=netherores:Amber
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -466,6 +517,7 @@ ores {
         I:baseBlockMeta=12
         S:baseBlockTexture=netherores:Tennantite
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -475,6 +527,7 @@ ores {
         I:baseBlockMeta=13
         S:baseBlockTexture=netherores:Salt
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -484,6 +537,7 @@ ores {
         I:baseBlockMeta=14
         S:baseBlockTexture=netherores:Saltpeter
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
@@ -493,10 +547,29 @@ ores {
         I:baseBlockMeta=15
         S:baseBlockTexture=netherores:Magnesium
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=netherrack
     }
 
+    block_55 {
+        S:baseBlock=appliedenergistics2:tile.OreQuartz
+        I:baseBlockMeta=0
+        S:baseBlockTexture=appliedenergistics2:OreQuartz
+        D:denseOreProbability=1
+        I:renderType=1
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
+
+    block_56 {
+        S:baseBlock=appliedenergistics2:tile.OreQuartzCharged
+        I:baseBlockMeta=0
+        S:baseBlockTexture=appliedenergistics2:OreQuartzCharged
+        D:denseOreProbability=1
+        I:renderType=1
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
+
 }
-
-
