Added Configs for Factorization, Forestry, Pam's Harvestcraft, and more
Added Tinker's Construct Aluminum and Gravel Ores

--- a/example_configs/mods/tcon.cfg
+++ b/example_configs/mods/tcon.cfg
@@ -37,6 +37,16 @@ ores {
         I:retroGenID=1
         S:underlyingBlock=stone
     }
+
+    block_X {
+        S:baseBlock=TConstruct:SearedBrick
+        I:baseBlockMeta=5
+        S:baseBlockTexture=tinker:ore_aluminum
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
 }
 
 
