Added Railcraft and added missing ores from BoP

--- a/example_configs/mods/biomesoplenty.cfg
+++ b/example_configs/mods/biomesoplenty.cfg
@@ -3,11 +3,22 @@
 
 ores {
 
-	block_X {
+    block_X {
+        S:baseBlock=BiomesOPlenty:gemOre
+        I:baseBlockMeta=0
+        S:baseBlockTexture=biomesoplenty:amethystore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=end_stone
+    }
+
+    block_X {
         S:baseBlock=BiomesOPlenty:gemOre
         I:baseBlockMeta=2
         S:baseBlockTexture=biomesoplenty:rubyore
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -17,6 +28,7 @@ ores {
         I:baseBlockMeta=4
         S:baseBlockTexture=biomesoplenty:peridotore
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -26,6 +38,7 @@ ores {
         I:baseBlockMeta=6
         S:baseBlockTexture=biomesoplenty:topazore
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -35,6 +48,7 @@ ores {
         I:baseBlockMeta=8
         S:baseBlockTexture=biomesoplenty:tanzaniteore
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -44,6 +58,7 @@ ores {
         I:baseBlockMeta=10
         S:baseBlockTexture=biomesoplenty:malachiteore
         D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
@@ -53,6 +68,17 @@ ores {
         I:baseBlockMeta=12
         S:baseBlockTexture=biomesoplenty:sapphireore
         D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
+
+    block_X {
+        S:baseBlock=BiomesOPlenty:gemOre
+        I:baseBlockMeta=14
+        S:baseBlockTexture=biomesoplenty:amberore
+        D:denseOreProbability=1
+        I:renderType=0
         I:retroGenID=1
         S:underlyingBlock=stone
     }
