--- a/example_configs/mods/Forestry.cfg
+++ b/example_configs/mods/Forestry.cfg
@@ -3,7 +3,7 @@
 
 ores {
     block_X {
-        S:baseBlock=Forestry:tile.resources
+        S:baseBlock=Forestry:resources
         I:baseBlockMeta=0
         S:baseBlockTexture=Forestry:ores/apatite
         D:denseOreProbability=1
@@ -13,7 +13,7 @@ ores {
     }
 
     block_X {
-        S:baseBlock=Forestry:tile.resources
+        S:baseBlock=Forestry:resources
         I:baseBlockMeta=2
         S:baseBlockTexture=Forestry:ores/tin
         D:denseOreProbability=1
@@ -23,7 +23,7 @@ ores {
     }
 
     block_X {
-        S:baseBlock=Forestry:tile.resources
+        S:baseBlock=Forestry:resources
         I:baseBlockMeta=1
         S:baseBlockTexture=Forestry:ores/copper
         D:denseOreProbability=1
