--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ forge-1.7.2-10.12.1.1065-changelog.txt
 out/*
 out/production/DenseOres/mcmod.info
 forge-*-changelog.txt
+src/main/java/com/rwtema/debug/
