Updated Railcraft configs and added Thaumcraft config

--- a/example_configs/mods/Railcraft.cfg
+++ b/example_configs/mods/Railcraft.cfg
@@ -102,6 +102,16 @@ ores {
         S:underlyingBlock=stone
     }
 
+    block_X {
+        S:baseBlock=Railcraft:tile.railcraft.ore
+        I:baseBlockMeta=11
+        S:baseBlockTexture=railcraft:ore.poor.lead
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=stone
+    }
+
 }
 
 
