--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ out/*
 out/production/DenseOres/mcmod.info
 forge-*-changelog.txt
 src/main/java/com/rwtema/debug/
+fml-1.8-8.0.16.1021-1.8-changelog.txt
