--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,20 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.4.2"
+version = "2.(-1).0 (alpha 1.8)"
 group= "com.rwtema.denseores" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "denseores"
 
 minecraft {
-    version = "1.7.10-10.13.0.1190"
-    assetDir = "eclipse/assets"
+    version = "1.8-11.14.0.1282-1.8"
+    runDir = "eclipse"
+    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not allways work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = "snapshot_nodoc_20141130"
 }
 
 dependencies {
