Update Project Red World.cfg

--- a/example_configs/mods/Project Red World.cfg
+++ b/example_configs/mods/Project Red World.cfg
@@ -5,7 +5,7 @@ ores {
     block_X {
         S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
         I:baseBlockMeta=0
-        S:baseBlockTexture=projectred:ore/oreruby
+        S:baseBlockTexture=projectred:world/ruby_ore
         D:denseOreProbability=1
         I:renderType=0
         I:retroGenID=0
@@ -16,7 +16,7 @@ ores {
     block_X {
         S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
         I:baseBlockMeta=1
-        S:baseBlockTexture=projectred:ore/oresapphire
+        S:baseBlockTexture=projectred:world/sapphire_ore
         D:denseOreProbability=1
         I:renderType=0
         I:retroGenID=0
@@ -27,7 +27,51 @@ ores {
     block_X {
         S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
         I:baseBlockMeta=2
-        S:baseBlockTexture=projectred:ore/oreperidot
+        S:baseBlockTexture=projectred:world/peridot_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        I:retroGenId=0
+        S:underlyingBlock=stone
+    }
+
+    block_X {
+        S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
+        I:baseBlockMeta=3
+        S:baseBlockTexture=projectred:world/copper_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        I:retroGenId=0
+        S:underlyingBlock=stone
+    }
+
+    block_X {
+        S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
+        I:baseBlockMeta=4
+        S:baseBlockTexture=projectred:world/tin_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        I:retroGenId=0
+        S:underlyingBlock=stone
+    }
+
+    block_X {
+        S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
+        I:baseBlockMeta=5
+        S:baseBlockTexture=projectred:world/silver_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=0
+        I:retroGenId=0
+        S:underlyingBlock=stone
+    }
+
+    block_X {
+        S:baseBlock=ProjRed|Exploration:projectred.exploration.ore
+        I:baseBlockMeta=6
+        S:baseBlockTexture=projectred:world/electrotine_ore
         D:denseOreProbability=1
         I:renderType=0
         I:retroGenID=0
