Proper update to 1.8

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ out/production/DenseOres/mcmod.info
 forge-*-changelog.txt
 src/main/java/com/rwtema/debug/
 fml-1.8-8.0.16.1021-1.8-changelog.txt
+run/
