--- a/example_configs/mods/MorePlanets.cfg
+++ b/example_configs/mods/MorePlanets.cfg
@@ -661,4 +661,94 @@ ores {
         I:retroGenID=1
         S:underlyingBlock=io:io_rock
     }
+    
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=3
+        S:baseBlockTexture=mpcore:darkasteroids/aluminum_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=4
+        S:baseBlockTexture=mpcore:darkasteroids/ilmenite_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=5
+        S:baseBlockTexture=mpcore:darkasteroids/iron_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=6
+        S:baseBlockTexture=mpcore:darkasteroids/meteoric_iron_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=7
+        S:baseBlockTexture=mpcore:darkasteroids/silicon_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=8
+        S:baseBlockTexture=mpcore:darkasteroids/diamond_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=9
+        S:baseBlockTexture=mpcore:darkasteroids/emerald_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:dark_asteroid_block
+        I:baseBlockMeta=10
+        S:baseBlockTexture=mpcore:darkasteroids/lapis_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
+
+    block_X {
+        S:baseBlock=MorePlanet:alphere_ore
+        I:baseBlockMeta=0
+        S:baseBlockTexture=mpcore:darkasteroids/alphere_ore
+        D:denseOreProbability=1
+        I:renderType=0
+        I:retroGenID=1
+        S:underlyingBlock=mpcore:darkasteroids/asteroid_rock_1
+    }
 }
